# Generative-AI

./: Analyse_pdf_document_with_LLM.py  GAN_generate_data.py  Gen_Property_data.py  Generate_Property_data_AU.py  Generative Adversarial Network.py  Hybrid_Fraud_Triage_Use_Case_bundle.md  RAG_T5_v2.py  RAG_XLNET_Search_RE_dev.py  RAG_XLNET_Search_RE_v2.py  README.md  Topic_similarity_output_BERT.ods  VAE_generate_data.py  XLNET_T5_comparison.txt  agentic_rag_langchain_j.py  automate_odt_extractionOO.py  automate_odt_extractionOO2.py  bert_matching.py  bert_matching_v2.py  bert_matching_v4.py  bert_matching_v6.py  bert_matching_v8.py  bert_matching_v9.py  causal_inference_GPT-Neo.py  cb_ChatBot_module.py  cb_rec1.py  cb_rec2.py  cb_rec3.py  chatterbot_test.py  document_features.csv  generate_data_with_LSTM.py  glove_similar_words_model.py  gpt-4o-to-gpt-5.1-migration-guide.md  gpt-4o-to-gpt-5.1-migration-token-guide.md  lacal_llm_summarisation_langchain  lemma_2.py  local_llm_fine_tune_quantisation  multi_agent_collaboration.py  ollama  ollama_databricks,py  ollama_databricks_v3.py  (+15 more)
Agentic_AI/: MCP.md  README.md  agent_memory_state.py  agentic_ai_definition  agentic_ai_local_copilot_wrap.py  agentic_rag.docx  multi_agent.py  simple_goal_directed_agent.py  simple_goal_directed_agent_phi3_mini.py  use_case_demo.py
Agentic_AI/Hybrid_AI_Architecture/ai_data_pipeline_repo/: README.md  pyproject.toml
Agentic_AI/Hybrid_AI_Architecture/ai_data_pipeline_repo/configs/: mapping.yml
Agentic_AI/Hybrid_AI_Architecture/ai_data_pipeline_repo/src/pipeline/: job.py  mapping.py
(+184 files in other folders)
