[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-data-pipeline"
version = "0.1.0"
description = "PySpark YAML-driven ETL pipeline"
requires-python = ">=3.10"

dependencies = [
    "pyspark>=3.5.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
